--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homework#1</title>
+    <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,600,700i&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 
@@ -90,7 +91,7 @@
  </p>
    </article>
 
-<button class="load-more">load-more</button>
+<button class="load-more">Load-more</button>
 
 </section>
 </div>
