--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -14,6 +14,7 @@
 
 <body>
     <header class="main-header">
+        <div class="conteiner">
         <nav class="main-nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
@@ -30,6 +31,7 @@
                 </li>  
             </ul>
         </nav>
+         </div>
      </header>
      <main class="main-content">
          <div class="container">
