--- a/html-css/module-03/index.html
+++ b/html-css/module-03/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="main-header">
-        <div class="conteiner">
+        <div class="container">
         <nav class="main-nav">
             <ul class="main-menu">
                 <li class="main-menu-item">
@@ -31,7 +31,7 @@
                 </li>  
             </ul>
         </nav>
-         </div>
+    </div>
      </header>
      <main class="main-content">
          <div class="container">
@@ -98,9 +98,7 @@
 </section>
 </div>
 </main>
-
 </body>
-
 </html>
 
 
