--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700|Roboto:100,300,400,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <header class="page-header container">
-      <nav>
-        <a href="#" class="site-logo">MART</a>
+      <nav class="clearfix">
+        <a href="#" class="site-logo">mart</a>
 
         <ul class="site-navigation clearfix">
           <li>
@@ -46,63 +43,104 @@
           class="slider-list-image"
           width="1600"
           height="600"
-        />
+        >
 
-        <div class="btn-wrappper container ">
+        <div class="btn-wrapper container ">
           <button class="slider-ctrl slider-ctrl-prew"></button>
           <button class="slider-ctrl slider-ctrl-next"></button>
-
-          <ul class="slider-list">
-            <li class="slider-list-item">
-              <div class="slider-description">
-                <h2 class="slider-title">AFFORDABLE PARIS TOURS</h2>
-                <p class="slider-p">CITY TOURS / TOUR TICKETS / TOUR GUIDES</p>
-              </div>
-            </li>
-          </ul>
         </div>
+        <ul class="slider-list">
+          <li class="slider-list-item">
+            <div class="slider-description">
+              <h2 class="slider-title">affordable paris tours</h2>
+              <p class="slider-p">city tours / tour tickets / tour guides</p>
+            </div>
+          </li>
+        </ul>
       </div>
       <section class="new">
         <div class="container">
-          <h2 class="title ">NEW COLECTION</h2>
+          <h3 class="title ">new collection</h3>
           <ul class="cards clearfix">
             <li class="cards-item">
               <div class="image-wrapper">
-                <div class="overlay">
-                  <ul class="overlay-list">
-                    <li class="list-item"><button ></button></li>
-                    <li class="list-item"><button></button></li>
-                    <li class="list-item"><button></button></li>
-                    <li class="list-item"><button></button></li>
+                <img src="img/1.jpg" alt="" class="cards-image" />
+                <h4 class="item">
+                  <a class="overlay-link" href="">Blue Tshirt</a>
+                </h4>
+                <p class="price">26$</p>
+                <div class="overlay clearfix">
+                  <ul class="overlay-list clearfix">
+                    <li class="list-item"><button class="like"></button></li>
+                    <li class="list-item"><button class="view"></button></li>
+                    <li class="list-item"><button class="time"></button></li>
+                    <li class="list-item"><button class="addcart"></button></li>
                   </ul>
                 </div>
-                <img src="img/1.jpg" alt="" class="cards-image" />
               </div>
-
-              <h4 class="item"><a class="overlay-link" href="">Blue Tshirt</a></h4>
-              <p class="price">26$</p>
             </li>
-            
+
+            <li class="cards-item">
+              <div class="image-wrapper">
+                <img src="img/2.jpg" alt="" class="cards-image" />
+                <h4 class="item">
+                  <a class="overlay-link" href="">WOMAN shirt</a>
+                </h4>
+                <p class="price">31$</p>
+                <div class="overlay clearfix">
+                  <ul class="overlay-list clearfix">
+                    <li class="list-item"><button class="like"></button></li>
+                    <li class="list-item"><button class="view"></button></li>
+                    <li class="list-item"><button class="time"></button></li>
+                    <li class="list-item"><button class="addcart"></button></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+
+            <li class="cards-item">
+              <div class="image-wrapper">
+                <img src="img/3.jpg" alt="" class="cards-image" />
+                <h4 class="item">
+                  <a class="overlay-link" href="">YELLOW Tshirt</a>
+                </h4>
+                <p class="price">21$</p>
+                <div class="overlay clearfix">
+                  <ul class="overlay-list clearfix">
+                    <li class="list-item"><button class="like"></button></li>
+                    <li class="list-item"><button class="view"></button></li>
+                    <li class="list-item"><button class="time"></button></li>
+                    <li class="list-item"><button class="addcart"></button></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
+
+            <li class="cards-item">
+              <div class="image-wrapper">
+                <img src="img/4.jpg" alt="" class="cards-image" />
+                <h4 class="item">
+                  <a class="overlay-link" href="">Cool lingerie</a>
+                </h4>
+                <p class="price">56$</p>
+                <div class="overlay clearfix">
+                  <ul class="overlay-list clearfix">
+                    <li class="list-item"><button class="like"></button></li>
+                    <li class="list-item"><button class="view"></button></li>
+                    <li class="list-item"><button class="time"></button></li>
+                    <li class="list-item"><button class="addcart"></button></li>
+                  </ul>
+                </div>
+              </div>
+            </li>
           </ul>
         </div>
       </section>
     </main>
+    <footer class="footer">
+        <p class="descp-footer">All Rights Reserved © Dokan Designed <a class="footer-link" href="#"> ThemenGraph
+        </a> 
+        </p>
+    </footer>
   </body>
 </html>
-
-<!-- </li>
-<li class="cards-item">
-    <img src="img/2.jpg" alt="" class="cards-image">
-    <h4 class="item">WOMAN shirt</h4>
-    <p class="price">31$</p>
-</li>
-<li class="cards-item">
-    <img src="img/3.jpg" alt="" class="cards-image">
-    <h4 class="item">YELLOW Tshirt</h4>
-    <p class="price">21$</p>
-</li>
-<li class="cards-item">
-    <img src="img/4.jpg" alt="" class="cards-image">
-    <h4 class="item">Cool lingerie</h4>
-    <p class="price">56$</p>
-</li> -->
