--- a/html-css/module-05/index.html
+++ b/html-css/module-05/index.html
@@ -37,15 +37,9 @@
     <main>
       <!-- <h1></h1> -->
       <div class="slider">
-        <img
-          src="img/bg.jpg"
-          alt=""
-          class="slider-list-image"
-          width="1600"
-          height="600"
-        >
-
-        <div class="btn-wrapper container ">
+        <img src="img/bg.jpg" alt="" class="slider-list-image">
+        
+        <div class="btn-wrapper container">
           <button class="slider-ctrl slider-ctrl-prew"></button>
           <button class="slider-ctrl slider-ctrl-next"></button>
         </div>
