--- a/html-css/module-04/index.html
+++ b/html-css/module-04/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework#4</title>
+    <title>Homework4</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&Roboto:400,700,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
