--- a/html-css/module-06/index.html
+++ b/html-css/module-06/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homework6</title>
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&Montserrat:400,700&Roboto:300i,400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css" >
 </head>
 <body>
     <header>
@@ -128,8 +128,8 @@
         </a> 
         </p>
 
-        <form class="test">
-            <input placeholder="Your Email..." class="disc_footer">
+        <form action="#" class="test">
+            <input type="text" placeholder="Your Email..." name="email" class="disc_footer">
             <button class="footer-button">subscribe</button>
         </form>
 
