--- a/html-css/module-11/src/html/amazing.html
+++ b/html-css/module-11/src/html/amazing.html
@@ -1,7 +1,7 @@
 <section class="amazing container">
     <!-- <h1 class="visually-hidden">hidden</h1> -->
     <div class="title-wrapper">
-      <h2 class="sections__title">
+      <h2 class="section__title">
         We work width <span class="section__title_p">amazing services</span>
       </h2>
     </div>
