--- a/html-css/module-11/src/html/our-team.html
+++ b/html-css/module-11/src/html/our-team.html
@@ -1,6 +1,6 @@
 <section class="our-team container">
     <div class="title-wrapper">
-      <h2 class="sections__title">
+      <h2 class="section__title">
         Who we are <span class="section__title_p">Meet our team</span>
       </h2>
     </div>
@@ -25,8 +25,8 @@
             class="cards__image"
             height="470"
           />
-          <p class="card__name">Matthew Dix</p>
-          <p class="card__position">Graphic Design</p>
+          <p class="cards__name">Matthew Dix</p>
+          <p class="cards__position">Graphic Design</p>
           <div class="overlay">
             <ul class="overlay__list">
               <li class="overlay__list_item">
@@ -74,8 +74,8 @@
             class="cards__image"
             height="470"
           />
-          <p class="card__name">Christopher Campbell</p>
-          <p class="card__position">Branding/UX design</p>
+          <p class="cards__name">Christopher Campbell</p>
+          <p class="cards__position">Branding/UX design</p>
           <div class="overlay">
             <ul class="overlay__list">
               <li class="overlay__list_item">
@@ -123,8 +123,8 @@
             class="cards__image"
             height="470"
           />
-          <p class="card__name">Michael Fertig</p>
-          <p class="card__position">Developer</p>
+          <p class="cards__name">Michael Fertig</p>
+          <p class="cards__position">Developer</p>
           <div class="overlay">
             <ul class="overlay__list">
               <li class="overlay__list_item">
